P4ADEV-2356-fix-notification-request-mapper